# observer_design_pattern

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
include/: Direction.hpp  Elevator.hpp
src/: Elevator.cpp
task2/: CMakeLists.txt  main.cpp  tests.cpp
task2/include/: Customer.hpp  IObserver.hpp  ISub.hpp  Newspaper.hpp
task2/src/: Customer.cpp  Newspaper.cpp
